--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   "name": "Brain - Trainer",
   "orientation": "any",
   "scope": "/",
-  "short_name": "Brain Trainer",
+  "short_name": "Brain - Trainer",
   "start_url": "/",
   "theme_color": "#ffffff",
   "categories": [
