--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,6 @@
 {
   "background_color": "#ffffff",
-  "description": "Game By Game Snacks
-",
+  "description": "Game By Game Snacks",
   "dir": "ltr",
   "display": "standalone",
   "name": "Brain:Trainer",
